# patch_langchain_common

./: .gitignore  .pre-commit.sh  Makefile  PR_README.md  README.md  format_lc.sh  pyproject.toml
compare_old_new/: layout-parser-paper.pdf_parsed_PDFMinerParser_page_old.md  layout-parser-paper.pdf_parsed_PDFMinerParser_single_new.md  layout-parser-paper.pdf_parsed_PDFMinerParser_single_old.md  layout-parser-paper.pdf_parsed_PDFPlumberParser_new.md  layout-parser-paper.pdf_parsed_PDFPlumberParser_old.md  layout-parser-paper.pdf_parsed_PDFPlumberParser_old.properties  layout-parser-paper.pdf_parsed_PyMuPDFParser_new.md  layout-parser-paper.pdf_parsed_PyMuPDFParser_new.properties  layout-parser-paper.pdf_parsed_PyMuPDFParser_old.md  layout-parser-paper.pdf_parsed_PyMuPDFParser_old.properties  layout-parser-paper.pdf_parsed_PyPDFParser_layout_new.md  layout-parser-paper.pdf_parsed_PyPDFParser_layout_old.md  layout-parser-paper.pdf_parsed_PyPDFParser_plain_new.md  layout-parser-paper.pdf_parsed_PyPDFium2Parser_new.properties  layout-parser-paper.pdf_parsed_PyPDFium2Parser_old.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_auto_new.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_auto_old.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_elements_new.properties  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_elements_old.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_elements_old.properties  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_fast_new.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_fast_old.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_hi_res_new.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_hi_res_old.md  parsers_metrics_results.xlsx
compare_old_new/langchain/hello.pdf/default/parsings_by_parser/: hello.pdf_parsed_AzureAIDocumentIntelligenceParser.md  hello.pdf_parsed_AzureAIDocumentIntelligenceParser.properties  hello.pdf_parsed_LlamaIndexPDFParser.md  hello.pdf_parsed_PDFMinerParser_single_new.md  hello.pdf_parsed_PDFMinerParser_single_new.properties  hello.pdf_parsed_PDFMinerParser_single_old.md  hello.pdf_parsed_PDFMinerParser_single_old.properties  hello.pdf_parsed_PDFPlumberParser_new.properties  hello.pdf_parsed_PDFPlumberParser_old.properties  hello.pdf_parsed_PyMuPDFParser_new.properties  hello.pdf_parsed_PyMuPDFParser_old.properties  hello.pdf_parsed_PyPDFParser_layout_new.properties  hello.pdf_parsed_PyPDFParser_layout_old.md  hello.pdf_parsed_PyPDFParser_plain_old.properties  hello.pdf_parsed_PyPDFium2Parser_new.properties  hello.pdf_parsed_UnstructuredPDFParser_elements_new.md  hello.pdf_parsed_UnstructuredPDFParser_elements_new.properties  hello.pdf_parsed_UnstructuredPDFParser_elements_old.properties  hello.pdf_parsed_UnstructuredPDFParser_fast_new.properties  hello.pdf_parsed_UnstructuredPDFParser_fast_old.properties  hello.pdf_parsed_ZeroxPDFParser_new.properties  hello.pdf_parsed_old_ZeroxPDFLoader_old.properties  parsers_metrics_results.xlsx
compare_old_new/langchain/layout-parser-paper.pdf/default/parsings_by_parser/: layout-parser-paper.pdf_parsed_AzureAIDocumentIntelligenceParser.md  layout-parser-paper.pdf_parsed_AzureAIDocumentIntelligenceParser.properties  layout-parser-paper.pdf_parsed_LlamaIndexPDFParser.md  layout-parser-paper.pdf_parsed_LlamaIndexPDFParser.properties  layout-parser-paper.pdf_parsed_PDFMinerParser_page_new.properties  layout-parser-paper.pdf_parsed_PDFMinerParser_single_new.md  layout-parser-paper.pdf_parsed_PDFMinerParser_single_old.md  layout-parser-paper.pdf_parsed_PDFMinerParser_single_old.properties  layout-parser-paper.pdf_parsed_PDFPlumberParser_new.md  layout-parser-paper.pdf_parsed_PDFPlumberParser_new.properties  layout-parser-paper.pdf_parsed_PDFPlumberParser_old.md  layout-parser-paper.pdf_parsed_PDFPlumberParser_old.properties  layout-parser-paper.pdf_parsed_PyMuPDFParser_new.md  layout-parser-paper.pdf_parsed_PyMuPDFParser_old.md  layout-parser-paper.pdf_parsed_PyMuPDFParser_old.properties  layout-parser-paper.pdf_parsed_PyPDFParser_layout_new.md  layout-parser-paper.pdf_parsed_PyPDFParser_layout_new.properties  layout-parser-paper.pdf_parsed_PyPDFParser_layout_old.md  layout-parser-paper.pdf_parsed_PyPDFParser_plain_new.md  layout-parser-paper.pdf_parsed_PyPDFParser_plain_old.md  layout-parser-paper.pdf_parsed_PyPDFParser_plain_old.properties  layout-parser-paper.pdf_parsed_PyPDFium2Parser_new.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_auto_old.md  layout-parser-paper.pdf_parsed_UnstructuredPDFParser_elements_old.md  (+14 more)
docs/: conf.py  index.rst
docs/docs/: properties_new.txt  properties_old.txt
docs/docs/how_to/: document_loader_custom.ipynb  document_loader_pdf.ipynb
docs/docs/integrations/document_loaders/: new_llamaindex.ipynb  new_pdfrouter.ipynb  new_pdrouter.ipynb  new_pymu4llm.ipynb  pdfminer.ipynb  pdfminer_fasthtml.ipynb  pdfplumber.ipynb  pymupdf.ipynb  pypdfdirectory.ipynb  pypdfium2.ipynb  pypdfloader.ipynb  zeroxpdfloader.ipynb
parser_comparator/: execute_notebooks.py  main.py  pdf_multi_loader.py  pdf_multi_parser.py  test_heuristics_pertinence.py  test_pdf_multi_parser.py  try_all.py
parser_comparator/sources_pdf/problematic_pdfs/: pdf_torture.docx
parser_comparator/sources_pdf/torture/: pdf_torture.docx  pdf_torture.pdf_X
parser_comparator/sources_pdf_X/: bugs.md
patch_langchain_community/: __init__.py
patch_langchain_community/document_loaders/: __init__.py  new_pdf.py  pdf.py
patch_langchain_community/document_loaders/parsers/: __init__.py  new_pdf.py  pdf.py
patch_partners/unstructured/patch_langchain_unstructured/: __init__.py  document_loaders.py
patch_partners/unstructured/tests/integration_tests/: test_document_loaders.py  test_parser.py
tests/integration_tests/document_loaders/: test_new_pdf.py  test_pdf.py
tests/integration_tests/document_loaders/parsers/: __init__.py  test_new_pdf.py  test_new_pdf_parsers.py  test_pdf_parsers.py
tests/unit_tests/document_loaders/: test_pdf.py
tests/unit_tests/document_loaders/parsers/: test_new_pdf.py  test_pdf.py
(+41 files in other folders)
